--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1>Ambient Temperature Heatmaps</h1>
+    <div id="heatmap-average" class="chart"></div>
     <div id="heatmap" class="chart"></div>
 
     <script src="main.js"></script>
