Move individual JS functions into separate files for import.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
   </head>
   <body>
-    <h1>Ambient Temperature Heatmaps</h1>
+    <h1>Ambient Temperature Visualizations</h1>
     <div id="line-graph-hourly-average" class="chart"></div>
     <div id="heatmap-average" class="chart"></div>
     <div id="heatmap" class="chart"></div>
 
-    <script src="main.js"></script>
+    <script type="module" src="/js/main.js"></script>
   </body>
 </html>
